# CutePeaks

./: .appveyor.yml  .gitignore  .travis.yml  .zenodo.json  AUTHORS  AbifSequenceTrace.cpp  AbifSequenceTrace.h  AbstractSequenceTrace.cpp  AbstractSequenceTrace.h  CHANGELOG  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  CutePeaks.pro  InfoView.cpp  InfoView.h  MainWindow.cpp  MainWindow.h  PanelWidget.cpp  PeaksView.cpp  PeaksView.h  PeaksWidget.cpp  PeaksWidget.h  README.md  ScfSequenceTrace.cpp  ScfSequenceTrace.h  SequenceEditor.cpp  SequenceEditor.h  SequenceTraceFactory.cpp  SequenceTraceFactory.h  TraceView.cpp  TraceView.h  abifreader.cpp  abifreader.h  cutepeaks.desktop  cutepeaks.icns  cutepeaks.pro  cutepeaks.rc  index.md  (+15 more)
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
QFontIcon/: qfonticon.cpp
_layouts/: default.html
core/: AbifSequenceTrace.cpp  AbifSequenceTrace.h  AbstractSequenceTrace.cpp  AbstractSequenceTrace.h  PeaksCalling.cpp  PeaksCalling.h  ScfSequenceTrace.cpp  ScfSequenceTrace.h  SequenceTraceFactory.cpp  SequenceTraceFactory.h  abifsequencetrace.cpp  abifsequencetrace.h  abstractsequencetrace.cpp  abstractsequencetrace.h  abstracttracereader.cpp  abstracttracereader.h  core.pri  nucleotidalphabet.cpp  nucleotidalphabet.h  reversesequenceproxytrace.cpp  reversesequenceproxytrace.h  reversesequencetrace.cpp  reversesequencetrace.h  scfsequencetrace.cpp  scfsequencetrace.h  sequence.cpp  sequence.h  sequencetracefactory.cpp  sequencetracefactory.h  trace.cpp  trace.h  tracefactory.cpp  tracefactory.h
examples/: A_forward.ab1  A_reverse.ab1  B_forward.ab1  B_reverse.ab1  abcZ_F.scf  abcZ_R.scf
gui/: MainWindow.cpp  MainWindow.h  TraceView.cpp  TraceView.h  abstractpanelwidget.cpp  abstractpanelwidget.h  cuttracecommand.h  gui.pri  infopanelwidget.cpp  infopanelwidget.h  mainwindow.cpp  mainwindow.h  sequencepanelwidget.cpp  sequencepanelwidget.h  sequenceview.cpp  sequenceview.h  tracecolor.h  traceview.cpp  traceview.h
localization/: cutepeaks_fr.ts
paper/: paper.bib  paper.md
qscintilla/Qt4Qt5/: CMakeLists.txt  qscintilla.pro
src/: cutepeaks  main.cpp  src.pro
src/QFontIcon/: qfonticon.cpp  qfonticon.h
src/core/: abifsequencetrace.cpp  abifsequencetrace.h  abiftracereader.cpp  abiftracereader.h  abstracttracereader.cpp  abstracttracereader.h  abstracttracewriter.cpp  abstracttracewriter.h  commandlineinterpreter.cpp  commandlineinterpreter.h  core.pri  nucleotidalphabet.cpp  proteinalphabet.cpp  scfheader.h  scfsequencetrace.cpp  scfsequencetrace.h  scftracereader.cpp  scftracereader.h  scftracewriter.cpp  scftracewriter.h  sequence.cpp  sequence.h  trace.cpp  trace.h  tracefactory.cpp  tracefactory.h
src/core/tracy/xxsds/: .clang-format  .gitmodules  .jenkinsfile  .travis.yml  AUTHORS  CMakeLists.txt  Make.helper.cmake  install.sh  sdsl-lite.pc.cmake
src/core/tracy/xxsds/CMakeModules/: AppendCompilerFlags.cmake  BMI2.cpp  CompilerFlags.cmake  DetectCPUFeatures.cmake  FindCxaDemangle.cmake  MODETI.cpp  ParseVersionFile.cmake  SSE42.cpp
src/core/tracy/xxsds/benchmark/document_retrieval/src/: doc_list_index.hpp  doc_list_index_greedy.hpp  doc_list_index_sada.hpp  doc_list_index_sort.hpp
src/core/tracy/xxsds/benchmark/lcp/: Makefile
src/core/tracy/xxsds/benchmark/self_delimiting_codes/: vectors.config
src/core/tracy/xxsds/benchmark/self_delimiting_codes/src/: sdc_benchmark.cpp
src/core/tracy/xxsds/examples/: CMakeLists.txt  bit-vector.cpp  fm-index.cpp  fm-rmq-index.cpp  intersect.cpp  k2_treap_in_mem.cpp  mem-vis.cpp  sa-construct-space-efficient.cpp  sd_vector_benchmark.cpp
src/core/tracy/xxsds/extras/: CMakeLists.txt  Doxyfile.in  pre-commit.cmake
src/core/tracy/xxsds/include/sdsl/: CMakeLists.txt  bit_vector_il.hpp  bit_vectors.hpp  bits.hpp  bp_support.hpp  bp_support_algorithm.hpp  bp_support_g.hpp  bp_support_gg.hpp  bp_support_sada.hpp  cereal.hpp  coder.hpp  coder_comma.hpp  coder_elias_delta.hpp  coder_elias_gamma.hpp  coder_fibonacci.hpp  config.hpp  construct.hpp  construct_bwt.hpp  construct_config.hpp  construct_isa.hpp  construct_lcp.hpp  construct_lcp_helper.hpp  construct_sa.hpp  construct_sa_se.hpp  csa_alphabet_strategy.hpp  csa_bitcompressed.hpp  csa_sada.hpp  csa_sampling_strategy.hpp  csa_wt.hpp  cst_fully.hpp  cst_iterators.hpp  cst_sada.hpp  cst_sct3.hpp  dac_vector.hpp  divsufsort.hpp  enc_vector.hpp  fast_cache.hpp  hyb_vector.hpp  int_vector.hpp  int_vector_buffer.hpp  (+75 more)
src/core/tracy/xxsds/lib/: .gitignore  CMakeLists.txt
src/core/tracy/xxsds/test/: CMakeLists.txt  README.md  bit_vector_test.cpp  coder_test.cpp  common.hpp  csa_byte_test.cpp  csa_int_test.config  csa_int_test.cpp  cst_byte_test.config  cst_byte_test.cpp  cst_helper.hpp  cst_int_test.config  cst_int_test.cpp  divsufsort_test.cpp  download_files.cmake  int_vector_buffer_test.cpp  int_vector_test.cpp  k2_treap_test.cpp  k2_tree_test.cpp  lcp_construct_test.cpp  nn_dict_dynamic_test.cpp  rank_support_test.cpp  rmq_test.cpp  sa_construct_test.config  sa_construct_test.cpp  sd_vector_test.cpp  search_bidirectional_test.config  search_bidirectional_test.cpp  select_support_test.cpp  sorted_int_stack_test.cpp  sorted_stack_support_test.cpp  wt_byte_test.config  wt_byte_test.cpp  wt_int_test.cpp
src/core/tracy/xxsds/test/header/: CMakeLists.txt
src/core/tracy/xxsds/tutorial/: CMakeLists.txt  csx-printf.cpp  expl-03.cpp
src/gui/: aboutdialog.cpp  abstractpanelwidget.cpp  abstractpanelwidget.h  cuttracecommand.cpp  cuttracecommand.h  fastaeditor.cpp  fastaeditor.h  gui.pri  infopanelwidget.cpp  mainwindow.cpp  mainwindow.h  searchbar.cpp  searchbar.h  sequencehighlighter.cpp  sequencehighlighter.h  sequencepanelwidget.cpp  sequencepanelwidget.h  sequenceview.cpp  tracecolor.cpp  traceview.cpp  traceview.h  updatedialog.cpp  updatedialog.h
src/resources/: AUTHORS  CHANGELOG  resources.qrc
tests/: tests.pro  tst_cutepeaks.cpp
translations/: cutepeaks_fr.ts
